k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: famflix-frontend-ingress
  namespace: famflix
spec:
  ingressClassName: traefik
  rules:
    - host:
        - famflix.cc
        - www.famflix.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
